# scantailor-deviant

./: CMakeLists.txt  COPYING  README.md  config.h.in
cmake/: FindEXIV2.cmake  FindOPENJPEG.cmake  SetDefaultGccFlags.cmake  default_cxxflags.cmake
debian/: changelog  control  copyright  scantailor-deviant.desktop
src/: CMakeLists.txt  Doxyfile
src/app/: CMakeLists.txt  CanberraSoundPlayer.cpp  ExportDialog.cpp  FixDpiDialog.cpp  MainWindow.cpp  NewOpenProjectPanel.cpp  NewOpenProjectPanel.h  RelinkablePathVisualization.cpp  RelinkingDialog.cpp  SettingsDialog.cpp  SettingsDialog.h  StartBatchProcessingDialog.cpp  ThumbnailSequence.cpp  ThumbnailSequence.h  ThumbnailView.cpp  ThumbnailView.h
src/app/resources/: SettingsTreeData.tsv  resources.qrc
src/app/ui/: AboutDialog.ui  CMakeLists.txt  ExportDialog.ui  FixDpiDialog.ui  LoadFilesStatusDialog.ui  MainWindow.ui  NewOpenProjectPanel.ui  ProjectFilesDialog.ui  RelinkingDialog.ui  RemovePagesDialog.ui  SettingsDialog.ui
src/app_cli/: CMakeLists.txt  ConsoleBatch.cpp
src/compat/: pstdint.h
src/core/: AbstractFilter.h  AbstractThumbnailMaker.h  BackgroundExecutor.cpp  CMakeLists.txt  CommandLine.cpp  CommandLine.h  ErrorWidget.h  FilterData.cpp  FilterData.h  ImageViewBase.cpp  ImageViewBase.h  IncompleteThumbnail.cpp  IncompleteThumbnail.h  JpegMetadataLoader.cpp  LoadFileTask.cpp  Margins.h  PageSelectionAccessor.cpp  PageSelectionProvider.h  ProjectPages.cpp  ProjectPages.h  ProjectWriter.cpp  RegenParams.h  ThumbnailBase.cpp  ThumbnailBase.h  ThumbnailFactory.cpp  ThumbnailMakerBase.cpp  ThumbnailMakerBase.h  ThumbnailPixmapCache.cpp  ThumbnailPixmapCache.h  TiffReader.cpp  TiffWriter.cpp
src/core/filters/deskew/: CMakeLists.txt  CacheDrivenTask.cpp  CacheDrivenTask.h  Dependencies.cpp  DewarpThumbnailMaker.cpp  DewarpThumbnailMaker.h  DewarpingParams.cpp  DewarpingParams.h  DewarpingThumbnail.cpp  DewarpingThumbnail.h  DewarpingView.cpp  DewarpingView.h  Filter.cpp  Filter.h  ImageView.cpp  ImageView.h  NoDistortionView.cpp  NoDistortionView.h  OptionsWidget.cpp  OptionsWidget.h  OrderByCameraFovProvider.cpp  OrderByCameraFovProvider.h  OrderByDewarpedHeightProvider.cpp  OrderByDewarpedHeightProvider.h  OrderByDewarpedWidthProvider.cpp  OrderByDewarpedWidthProvider.h  OrderByDistortionTypeProvider.cpp  OrderByDistortionTypeProvider.h  OrderByPaperBendProvider.cpp  OrderByPaperBendProvider.h  Params.cpp  PerspectiveParams.cpp  PerspectiveParams.h  RotationThumbnail.cpp  RotationThumbnail.h  STEX_PolylineModelShape.cpp  STEX_PolylineModelShape.h  Settings.cpp  Settings.h  Task.cpp  (+5 more)
src/core/filters/deskew/ui/: DeskewOptionsWidget.ui
src/core/filters/fix_orientation/: CMakeLists.txt  CacheDrivenTask.cpp
src/core/filters/output/: BlackWhiteOptions.cpp  BlackWhiteOptions.h  CMakeLists.txt  CacheDrivenTask.cpp  CacheDrivenTask.h  ChangeDpiDialog.cpp  ChangeDpiDialog.h  ColorParams.h  ColorPickupInteraction.cpp  ImageView.cpp  ImageView.h  ImageViewTab.h  OptionsWidget.cpp  OptionsWidget.h  OrderByModeProvider.h  OutputGenerator.cpp  OutputGenerator.h  OutputImageParams.cpp  OutputImageParams.h  Params.cpp  Params.h  (+10 more)
src/core/interaction/: CMakeLists.txt  DraggableObject.h  DraggablePolygon.cpp  InteractionHandler.h  InteractiveXSpline.cpp  InteractiveXSpline.h  ObjectDragHandler.cpp  ZoomHandler.cpp  ZoomHandler.h
src/core/settings/: globalstaticsettings.cpp  hotkeysmanager.cpp  ini_keys.cpp  ini_keys.h
src/core/ui/: CMakeLists.txt
src/core/zones/: CMakeLists.txt  EditableEllipse.cpp  EditableEllipse.h  EditableSpline.h  LocalClipboard.cpp  LocalClipboard.h  SerializableEllipse.cpp  SerializableEllipse.h  SplineVertex.cpp  ZoneEllipseVertexDragInteraction.cpp  ZoneEllipseVertexDragInteraction.h  ZoneVertexDragInteraction.cpp
src/dewarping/: BendParams.cpp  BendParams.h  CMakeLists.txt  Curve.cpp  Curve.h  CylindricalSurfaceDewarper.cpp  CylindricalSurfaceDewarper.h  DepthPerception.cpp  DepthPerception.h  DetectVerticalBounds.h  DewarpingImageTransform.cpp  DewarpingImageTransform.h  Directrix.cpp  Directrix.h  DistortionModel.cpp  DistortionModel.h  DistortionModelBuilder.cpp  DistortionModelBuilder.h  FovParams.cpp  FovParams.h  FrameParams.cpp  FrameParams.h  HomographicTransform.cpp  HomographicTransform.h  ImageSize.h  MarginsParams.cpp  MarginsParams.h  PerspectiveTransform.cpp  PerspectiveTransform.h  RasterDewarper.cpp  RasterDewarper.h  STEX_AbstractImageTransform.h  STEX_AffineImageTransform.cpp  STEX_AffineImageTransform.h  STEX_AffineTransform.cpp  STEX_AffineTransformedImage.cpp  STEX_AffineTransformedImage.h  STEX_BadAllocIfNull.cpp  STEX_Connectivity.h  STEX_ConnectivityMap.cpp  (+34 more)
src/exporting/: CMakeLists.txt  ExportModes.h  ExportSettings.h  ExportThread.cpp  ExportThread.h  ImageSplitOps.cpp  ImageSplitOps.h
src/foundation/: CMakeLists.txt  CopyableByMemcpy.h  FuzzyEquals.cpp  FuzzyEquals.h  Grid.h  GridAccessor.h  MinMaxAccumulator.h  MultipleTargetsSupport.h  PropertySet.cpp  RefCountable.h
src/imageproc/: AbstractImageTransform.h  AffineImageTransform.cpp  AffineImageTransform.h  AffineTransform.h  AffineTransformedImage.h  BWPixelProxy.h  Binarize.cpp  Binarize.h  BinaryImage.cpp  BinaryImage.h  BitOps.h  CMakeLists.txt  ColorFilter.cpp  ColorFilter.h  ConnectivityMap.cpp  ConnectivityMap.h  GaussBlur.cpp  GaussBlur.h  GrayImage.cpp  GrayImage.h  Grayscale.cpp  Morphology.cpp  PlugHoles.h  PolygonRasterizer.cpp  PolygonRasterizer.h  RastLineFinder.h  RasterOpGeneric.h  Scale.cpp  SeedFill.cpp  TraverseBorders.h  WatershedSegmentation.cpp
src/math/: ArcLengthMapper.cpp  ArcLengthMapper.h  CMakeLists.txt  LineBoundedByPolygon.h  XSpline.cpp
src/math/spfit/: PolylineModelShape.cpp  SplineFitter.cpp
src/packaging/linux/: README.md
src/packaging/osx/: Info.plist.in  README.md  buildscantailor.sh  makeapp.sh  readme.en.txt
src/packaging/windows/: README.md
src/stylesheets/: Breeze.qss  BreezeDark.qss  dark_blue.qss  ubuntu.qss
src/stylesheets/BreezeDark/: README.md
src/translations/: scantailor-deviant_ru.ts  scantailor-deviant_untranslated.ts  scantailor-universal_ru.ts
(+38 files in other folders)
